src/scss/common/_video-block.scss
.video-block {

	h2 {
		padding-left: 15px;

		@include small-and-up {
			padding-left: 0;
		}
	}

	.video-section {

		@include small-and-up {
			height: 240px;
		}

		@include medium-and-up {
			height: 400px;
		}

		@include large-and-up {
			height: 530px;
		}

		@include x-large-and-up {
			height: 630px;
		}
	}

	.container {
		padding-left: 0;
		padding-right: 0;

		@include medium-and-up {
			padding-left: 15px;
			padding-right: 15px;
		}
	}
}

